namespace/heimdall/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
spec:
  selector:
    app: heimdall
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: heimdall-ui
  type: ClusterIP
